--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- HEMOS QUITADO LA BARRA INICIAL AQUÍ -->
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
