--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root"></div>
     <!-- HEMOS QUITADO LA BARRA INICIAL AQUÍ -->
-    <script type="module" src="src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
