Forzando despliegue por Actions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculadora de Rally</title>
   </head>
   <body>
-    <div id="root">Cargando aplicación...</div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
